<resources>

    <!-- Popular Word -->
    <string name="ok">OK</string>

    <!-- MainActivity -->
    <string name="app_name">Run!</string>
    <string name="tArmL">L Arm</string>
    <string name="tArmR">R Arm</string>
    <string name="tKneeL">L Knee</string>
    <string name="tKneeR">R Knee</string>
    <string name="tAnkleL">L Ankle</string>
    <string name="tAnkleR">R Ankle</string>
    <string name="tShinL">L Shin</string>
    <string name="tShinR">R Shin</string>
    <string name="tAngleL">L KneeAngle</string>
    <string name="tAngleR">R KneeAngle</string>
    <string name="tAllSensor"><font size="16"><b>All Sensor</b></font></string>
    <string name="button_getData">Show Distance</string>
    <string name="button_findAngle">Find Angle</string>

    <!-- Menu -->
    <string name="menu_home">HOME</string>
    <string name="menu_allBeacon">All Beacons</string>
    <string name="menu_newRound">New Round</string>
    <string name="menu_history">History</string>

    <!--New Round Activity -->
    <string name="newRound_button_startRound">Start Running</string>

    <!-- RunningActivity -->
    <string name="running_button_stopScan">Stop Running</string>

    <!-- ResultActivity -->
    <string name="tResult_RoundSummary">Round Summary</string>
    <string name="tResult_LeftPercent">Left :</string>
    <string name="tResult_RightPercent">Right :</string>
    <string name="tResult_AngleSim">Angle Simulation</string>
    <string name="tResult_Status">Status</string>
    <string name="title_activity_nevigation_drawer">NevigationDrawerActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="under_header_line">_</string>

    <!-- allBeaconActivity -->
    <string name="allbeacon_textView_device_connect">Connected</string>
    <string name="allbeacon_textView_device_not_found">Not Found</string>

    <!-- historyActivity -->
    <string name="history_textView_header">Round History</string>
    <string name="history_button_clearHistory">Clear History</string>

</resources>
