<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:checkableBehavior="single"
        android:id="@+id/drawer_layout">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_allBeacon"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_allBeacon" />
        <item
            android:id="@+id/nav_newRound"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_newRound" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_history" />
    </group>

</menu>
