<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gear.asrm.ResultActivity">

    <RelativeLayout
        android:layout_width="368dp"
        android:layout_height="510dp"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_marginTop="100dp">

<!-- Round Summary -->
        <TextView
            android:text="@string/tResult_RoundSummary"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="20dp"

            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColor="#ff4646"
            android:textSize="24dp"
            android:id="@+id/textView" />
        <TextView
            android:layout_marginTop="40dp"
            android:layout_marginLeft="84dp"

            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="_"
            android:textScaleX="30"
            android:textAlignment="center"
            android:textColor="#69c7d2"/>
        <TextView
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="70dp"

            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:text="@string/tResult_LeftPercent"
            android:textSize="20dp"
            android:textColor="#00c4db" />
        <TextView
            android:text="@string/tResult_RightPercent"
            android:layout_alignStart="@+id/textView"
            android:layout_marginTop="110dp"

            android:layout_width="wrap_content"
            android:layout_height="25dp"
            android:textSize="20dp"
            android:textColor="#00c4db"/>

<!-- Angle Simulation -->
        <TextView
            android:text="@string/tResult_AngleSim"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="150dp"

            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColor="#ff4646"
            android:textSize="24dp" />
        <TextView
            android:layout_marginTop="170dp"
            android:layout_marginLeft="84dp"

            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="_"
            android:textScaleX="30"
            android:textAlignment="center"
            android:textColor="#69c7d2"/>

<!-- Status -->
        <TextView
            android:text="@string/tResult_Status"
            android:layout_marginLeft="84dp"
            android:layout_marginTop="330dp"

            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAlignment="center"
            android:textColor="#ff4646"
            android:textSize="24dp" />
        <TextView
            android:layout_marginTop="350dp"
            android:layout_marginLeft="84dp"

            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="_"
            android:textScaleX="30"
            android:textAlignment="center"
            android:textColor="#69c7d2"/>
        <TextView
            android:id="@+id/result_textView_showStatus"
            android:text="GOOD!"
            android:layout_marginLeft="89dp"
            android:layout_marginTop="372.5dp"
            android:layout_width="190dp"
            android:layout_height="35dp"

            android:background="#dfdfdf"
            android:textAlignment="center"
            android:textColor="#498b93"
            android:textSize="24dp" />
        <TextView
            android:layout_marginTop="400dp"
            android:layout_marginLeft="84dp"

            android:layout_width="200dp"
            android:layout_height="20dp"
            android:text="_"
            android:textScaleX="30"
            android:textAlignment="center"
            android:textColor="#69c7d2"/>
        <Button
            android:id="@+id/result_button_OK"
            android:layout_marginTop="430dp"
            android:layout_marginLeft="134dp"

            android:layout_width="100dp"
            android:layout_height="50dp"
            android:text="@string/ok"
            android:textColor="#FFFFFF"
            android:textSize="20dp"
            android:background="#69c7d2"/>
    </RelativeLayout>

</android.support.constraint.ConstraintLayout>
