<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    android:id="@+id/main_layout_Constraint"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gear.asrm.MainActivity"
    android:background="@color/BGPrimary">

    <RelativeLayout android:id="@+id/main_layout_Relative"
        app:layout_constraintTop_toTopOf="@id/main_layout_Constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/main_textView_header"
            style="@style/textView_header24"
            android:layout_width="wrap_content"
            android:layout_height="30dp"

            android:layout_marginTop="20dp"
            android:layout_marginStart="30dp"
            android:text="@string/menu_home"/>
        <!-- textView_armL, output_armL, textView_armR, output_armR -->
        <TextView
            android:id="@+id/textView_armL"
            android:textColor="@color/textPrimary"
            android:layout_width="80dp"
            android:layout_height="20dp"

            android:layout_marginTop="60dp"
            android:layout_marginStart="20dp"
            android:text="@string/tArmL" />
        <TextView
            android:id="@+id/output_armL"
            android:textColor="@color/textPrimary"
            android:background="@color/outputTextBackground"
            android:layout_width="90dp"
            android:layout_height="20dp"

            android:layout_marginTop="60dp"
            android:layout_marginStart="100dp"
            android:text="" />

        <!-- textView_kneeL, output_kneeL, textView_kneeR, output_kneeR -->
        <TextView
            android:id="@+id/textView_kneeL"
            android:textColor="@color/textPrimary"
            android:layout_width="80dp"
            android:layout_height="20dp"

            android:layout_marginTop="90dp"
            android:layout_marginStart="20dp"
            android:text="@string/tKneeL" />
        <TextView
            android:id="@+id/output_kneeL"
            android:textColor="@color/textPrimary"
            android:background="@color/outputTextBackground"
            android:layout_width="90dp"
            android:layout_height="20dp"

            android:layout_marginTop="90dp"
            android:layout_marginStart="100dp"
            android:text="" />

        <!-- textView_ankleL, output_ankleL, textView_ankleR, output_ankleR -->
        <TextView
            android:id="@+id/textView_ankleL"
            android:textColor="@color/textPrimary"
            android:layout_width="80dp"
            android:layout_height="20dp"

            android:layout_marginTop="120dp"
            android:layout_marginStart="20dp"
            android:text="@string/tAnkleL" />
        <TextView
            android:id="@+id/output_ankleL"
            android:textColor="@color/textPrimary"
            android:background="@color/outputTextBackground"
            android:layout_width="90dp"
            android:layout_height="20dp"

            android:layout_marginTop="120dp"
            android:layout_marginStart="100dp"
            android:text="" />

        <!-- textView_shinL, output_shinL, textView_shinR, output_shinR -->
        <TextView
            android:id="@+id/textView_shinL"
            android:textColor="@color/textPrimary"
            android:layout_width="80dp"
            android:layout_height="20dp"

            android:layout_marginTop="150dp"
            android:layout_marginStart="20dp"
            android:text="@string/tShinL" />

        <TextView
            android:id="@+id/output_shinL"
            android:layout_width="90dp"
            android:layout_height="20dp"
            android:layout_alignBaseline="@+id/textView_shinL"
            android:layout_alignBottom="@+id/textView_shinL"

            android:layout_toEndOf="@+id/textView_shinL"
            android:background="@color/outputTextBackground"
            android:text=""
            android:textColor="@color/textPrimary" />

        <!-- textView_angelL, output_angelR, textView_angleR, output_angleR-->
        <TextView
            android:id="@+id/textView_angelL"
            android:textColor="@color/textPrimary"
            android:layout_width="80dp"
            android:layout_height="20dp"

            android:layout_marginTop="180dp"
            android:layout_marginStart="20dp"
            android:text="@string/tAngleL" />
        <TextView
            android:id="@+id/output_angleL"
            android:textColor="@color/textPrimary"
            android:background="@color/outputTextBackground"
            android:layout_width="90dp"
            android:layout_height="20dp"

            android:layout_marginTop="180dp"
            android:layout_marginStart="100dp"
            android:text="" />

        <!-- Button -->
        <Button
            android:id="@+id/button_getData"
            style="@style/button_WHITE"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="270dp"
            android:layout_marginStart="90dp"
            android:text="@string/button_getData" />
        <Button
            android:id="@+id/button_findAngle"
            style="@style/button_WHITE"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:layout_marginTop="270dp"
            android:layout_marginStart="200dp"
            android:text="Show Result" />

    </RelativeLayout>

    <FrameLayout android:id="@+id/main_layout_Frame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">
    </FrameLayout>


</android.support.constraint.ConstraintLayout>
