<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.gear.asrm.activity.allBeaconActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView android:id="@+id/allBeacon_textView_Header"
            android:text="@string/menu_allBeacon"
            style="@style/textView_header24"

            android:layout_width="200dp"
            android:layout_height="30dp"
            android:textAlignment="center"

            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <TextView android:text="@string/under_header_line"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="40dp"
            android:layout_width="200dp"
            android:layout_height="20dp"
            android:textScaleX="30"
            android:textAlignment="center"
            android:textColor="#69c7d2"/>

        <!-- Device1 -->
        <TextView android:id="@+id/allBeacon_textView_device1_location"
            android:layout_marginTop="60dp"
            android:layout_alignStart="@id/allBeacon_textView_Header"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/tKneeL"
            style="@style/font_bold_text" />
        <TextView android:id="@+id/allBeacon_textView_device1_status"
            android:text=""
            style="@style/font_italic_text"
            android:textAlignment="center"
            android:background="#e1e1e1"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="60dp"
            android:layout_toEndOf="@id/allBeacon_textView_device1_location" />
        <TextView android:id="@+id/allBeacon_textView_device1_address"
            android:text="50:8C:B1:75:16:D2"
            style="@style/font_description"
            android:layout_marginTop="90dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="30dp"
            />

        <!-- Device2 -->
        <TextView android:id="@+id/allBeacon_textView_device2_location"
            android:layout_marginTop="110dp"
            android:layout_alignStart="@id/allBeacon_textView_Header"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/tAnkleL"
            style="@style/font_bold_text" />
        <TextView android:id="@+id/allBeacon_textView_device2_status"
            android:text=""
            style="@style/font_italic_text"
            android:textAlignment="center"
            android:background="#e1e1e1"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="110dp"
            android:layout_toEndOf="@id/allBeacon_textView_device1_location" />
        <TextView android:id="@+id/allBeacon_textView_device2_address"
            android:text="D4:36:39:DE:57:D0"
            style="@style/font_description"
            android:layout_marginTop="140dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="30dp"
            />

        <!-- Device3 -->
        <TextView android:id="@+id/allBeacon_textView_device3_location"
            android:layout_marginTop="160dp"
            android:layout_alignStart="@id/allBeacon_textView_Header"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/tArmL"
            style="@style/font_bold_text" />
        <TextView android:id="@+id/allBeacon_textView_device3_status"
            android:text=""
            style="@style/font_italic_text"
            android:textAlignment="center"
            android:background="#e1e1e1"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="160dp"
            android:layout_toEndOf="@id/allBeacon_textView_device1_location" />
        <TextView android:id="@+id/allBeacon_textView_device3_address"
            android:text="D4:36:39:DE:56:C6"
            style="@style/font_description"
            android:layout_marginTop="190dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="30dp"
            />

        <!-- Device4 -->
        <TextView android:id="@+id/allBeacon_textView_device4_location"
            android:layout_marginTop="210dp"
            android:layout_alignStart="@id/allBeacon_textView_Header"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/tKneeR"
            style="@style/font_bold_text" />
        <TextView android:id="@+id/allBeacon_textView_device4_status"
            android:text=""
            style="@style/font_italic_text"
            android:textAlignment="center"
            android:background="#e1e1e1"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="210dp"
            android:layout_toEndOf="@id/allBeacon_textView_device1_location" />
        <TextView android:id="@+id/allBeacon_textView_device4_address"
            android:text="50:8C:B1:75:16:D2"
            style="@style/font_description"
            android:layout_marginTop="240dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="30dp"
            />

        <!-- Device5 -->
        <TextView android:id="@+id/allBeacon_textView_device5_location"
            android:layout_marginTop="260dp"
            android:layout_alignStart="@id/allBeacon_textView_Header"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/tAnkleR"
            style="@style/font_bold_text" />
        <TextView android:id="@+id/allBeacon_textView_device5_status"
            android:text=""
            style="@style/font_italic_text"
            android:textAlignment="center"
            android:background="#e1e1e1"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="260dp"
            android:layout_toEndOf="@id/allBeacon_textView_device1_location" />
        <TextView android:id="@+id/allBeacon_textView_device5_address"
            android:text="D4:36:39:DE:57:D0"
            style="@style/font_description"
            android:layout_marginTop="290dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="30dp"
            />

        <!-- Device6 -->
        <TextView android:id="@+id/allBeacon_textView_device6_location"
            android:layout_marginTop="310dp"
            android:layout_alignStart="@id/allBeacon_textView_Header"
            android:layout_width="90dp"
            android:layout_height="30dp"
            android:text="@string/tArmR"
            style="@style/font_bold_text" />
        <TextView android:id="@+id/allBeacon_textView_device6_status"
            android:text=""
            style="@style/font_italic_text"
            android:textAlignment="center"
            android:background="#e1e1e1"
            android:layout_width="110dp"
            android:layout_height="30dp"
            android:layout_marginTop="310dp"
            android:layout_toEndOf="@id/allBeacon_textView_device1_location" />
        <TextView android:id="@+id/allBeacon_textView_device6_address"
            android:text="D4:36:39:DE:56:C6"
            style="@style/font_description"
            android:layout_marginTop="340dp"
            android:layout_centerHorizontal="true"
            android:layout_width="200dp"
            android:layout_height="30dp"
            />

    </RelativeLayout>


</android.support.constraint.ConstraintLayout>
